--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:7.2.2'
     }
 }
 plugins {
     id 'org.gradle.crypto.checksum' version '1.4.0'
 }
 
-import org.gradle.crypto.checksum.Checksum
+//import org.gradle.crypto.checksum.Checksum
 apply plugin: 'com.android.application'
 
 repositories {
