--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -67,7 +67,7 @@
         </activity>
         <activity
             android:exported="false"
-            android:name=".eSpeakActivity"
+            android:name=".EkhoActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
