--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.eguidedog.ekho">
+    <uses-sdk android:minSdkVersion="21" />
 
     <uses-feature
         android:name="android.hardware.touchscreen"
