--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ android {
         targetSdkVersion 32
         versionCode 40
         versionName "4.0"
-        ndk { abiFilters /*'arm64-v8a', 'armeabi-v7a',*/ 'x86'/*'x86_64'*/ }
+        ndk { abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64' }
     }
 
     externalNativeBuild {
