--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ repositories {
 
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'org.hamcrest:hamcrest-all:1.3'
+    //testImplementation 'junit:junit:4.12'
+    //androidTestImplementation 'org.hamcrest:hamcrest-all:1.3'
 }
 
 /*
@@ -66,14 +66,14 @@ preBuild.dependsOn createDataVersion
 */
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 40
         versionName "4.0"
-        ndk { abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64' }
+        ndk { abiFilters /*'arm64-v8a', 'armeabi-v7a',*/ 'x86', 'x86_64' }
     }
 
     externalNativeBuild {
