--- a/build.gradle
+++ b/build.gradle
@@ -69,11 +69,12 @@ android {
     compileSdkVersion 33
 
     defaultConfig {
+        applicationId "cameronhuang150.ekho"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 40
         versionName "4.0"
-        ndk { abiFilters /*'arm64-v8a', 'armeabi-v7a',*/ 'x86', 'x86_64' }
+        ndk { abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64' }
     }
 
     externalNativeBuild {
