--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'com.android.tools.build:gradle:8.5.0'
     }
 }
 plugins {
@@ -66,14 +66,16 @@ preBuild.dependsOn createDataVersion
 */
 
 android {
-    compileSdkVersion 33
+    namespace "net.eguidedog.ekho"
+    compileSdk 35
 
     defaultConfig {
         applicationId "cameronhuang150.ekho"
         minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 41
-        versionName "4.1"
+        //noinspection EditedTargetSdkVersion
+        targetSdk 35
+        versionCode 42
+        versionName "4.2"
         ndk { abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64' }
     }
 
