--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-android.defaults.buildfeatures.buildconfig=true
+#android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
 android.nonTransitiveRClass=false
